# EnvyEngine

./: .gitignore  .gitmodules  CMakeLists.txt
src/: main.cpp
src/Core/: Game.cpp  Game.h
src/Core/Events/: EnvyEvent.h  EnvyEventListener.cpp  EnvyEventListener.h  EnvyEventManager.cpp  EnvyEventManager.h  EnvyEventSystem.cpp  EnvyEventSystem.h  EventBase.h
src/Core/Events/EventTypes/: DrawEvent.h  Events.h  SpriteMoveEvent.h
src/Objects/: Object.cpp  Object.h
src/Render/: DirectionHelper.cpp  DirectionHelper.h  EnvyRenderer.cpp  EnvyRenderer.h  Sprite.cpp  Sprite.h  SpritePosition.cpp  SpritePosition.h
